# Finchie

./: README.md  Taskfile.yml
.github/: dependabot.yml
.github/workflows/: data-pipeline.yml
services/creditapi/: .golangci.yml  Taskfile.yml  go.mod
services/data-pipeline/: .gitignore  README.md  main.py  pyproject.toml
services/data-pipeline/config/: config.json
services/data-pipeline/src/: main.py
services/data-pipeline/src/common/: config.py
services/data-pipeline/src/finchie-data-pipeline/extract/: gmail_extractor.py
services/data-pipeline/src/finchie_data_pipeline/: __init__.py  dispatcher.py
services/data-pipeline/src/finchie_data_pipeline/document_extractors/: base.py  tsib_estatement_extractor.py  tsib_extractor.py
services/data-pipeline/src/finchie_data_pipeline/extract/: gmail_extractor.py
services/data-pipeline/src/finchie_data_pipeline/models/: __init__.py  card_details.py  credit_card_bill.py  statement_source.py
services/data-pipeline/src/finchie_data_pipeline/parsers/: tsib_estatement_parsers.py
services/data-pipeline/src/finchie_data_pipeline/source_extractors/: gmail_extractor.py
services/data-pipeline/src/finchie_data_pipeline/utils/: logging_utils.py  type_utils.py
services/data-pipeline/tests/: test_config.py  test_dispatcher.py  test_gmail_extractor.py  test_tsib_estatement_extractor.py  test_tsib_estatement_parsers.py  test_tsib_extractor.py
services/data-pipeline/tests/utils/: test_logging_utils.py  test_type_utils.py
services/ledger-svc/: .env.example  .golangci.yml  Taskfile.yml  go.mod  go.sum
services/statement-fetcher/: .gitignore  README.md  Taskfile.yml  (+1 more)
(+44 files in other folders)
