[project]
name = "finchie_data_pipeline"
version = "0.1.0"
description = "Automated ETL pipeline for extracting financial data from multiple sources, processing and loading it into Finchie's API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.165.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 140

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warning
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "N",   # pep8-naming
    "G",   # flake8-logging-format
    "LOG", # flake8-logging
    "PT",  # flake8-pytest-style
]
ignore = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true